// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for activity 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "opacity": 1,
    }
  }
>
  <Text>
    <Text
      style={
        Object {
          "color": "#444",
          "fontWeight": "bold",
        }
      }
    >
      someUser
    </Text>
     
    down voted
     
    <Text
      style={
        Object {
          "color": "#444",
          "fontWeight": "bold",
        }
      }
    >
      some title
    </Text>
  </Text>
</View>
`;

exports[`renders correctly for comment 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "opacity": 1,
    }
  }
>
  <Text>
    <Text
      style={
        Object {
          "color": "#444",
          "fontWeight": "bold",
        }
      }
    >
      someUser
    </Text>
     
    down voted
     
    <Text
      style={
        Object {
          "color": "#444",
          "fontWeight": "bold",
        }
      }
    >
       your comment 
    </Text>
  </Text>
</View>
`;

exports[`renders correctly for object 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "opacity": 1,
    }
  }
>
  <Text>
    <Text
      style={
        Object {
          "color": "#444",
          "fontWeight": "bold",
        }
      }
    >
      someUser
    </Text>
     
    down voted
     
    <Text
      style={
        Object {
          "color": "#444",
          "fontWeight": "bold",
        }
      }
    >
      some title
    </Text>
  </Text>
</View>
`;
